--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@coinbase/wallet-sdk": "^3.0.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -12,9 +13,11 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@walletconnect/web3-provider": "^1.7.5",
+    "antd": "^4.19.3",
     "ethers": "^5.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4",
